# blckjck_bot

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
src/: alembic.ini  main.py  prestart.sh
src/application/interfaces/: __init__.py  cache_game_repo_interface.py  cache_lobby_repo_interface.py  leaderboard.py  telegram_interface.py  users_repo_interface.py
src/application/schemas/: __init__.py  card.py  dealer.py  game.py  lobby.py  player.py  user.py
src/application/services/: __init__.py  command.py  game_service.py  game_serviceTG.py  lobby_service.py  lobby_serviceTG.py  timer_mng.py  types.py  user_service.py
src/domain/entities/: __init__.py  card.py  dealer.py  game.py  lobby.py  player.py  user.py
src/domain/types/game/: __init__.py  errors.py  gameresult.py
src/domain/types/user/: exceptions.py
src/infrastructure/: config.py
src/infrastructure/alembic/: env.py
src/infrastructure/alembic/versions/: 2025_03_25_1826-454d714b911d_create_users_table.py  2025_05_23_2023-fab592fc783f_add_date_bonus_column_to_users_table.py
src/infrastructure/database/: __init__.py
src/infrastructure/database/models/: db_helper.py  user.py
src/infrastructure/redis_py/: client.py  redis_helper.py
src/infrastructure/redis_py/events/: event_system.py  (+1 more)
src/infrastructure/repositories/: __init__.py  redis_game_cache_repo.py  redis_leaderboard.py  redis_lobby_cache_repo.py  sqlalchemy_user_repo.py
src/infrastructure/telegram/: bot.py
src/utils/: logger.py  tg_utils.py
src/utils/tg/: filters.py  functions.py
(+21 files in other folders)
